# MicroService.ChatGroup

./: CMakeLists.txt
linux/: CMakeLists.txt  chatgroupService  cmake_install.cmake  main.cpp
linux/source/: ChatGroupService.cpp  ChatGroupService.h  ErrCode.cpp  ErrCode.h
linux/source/Command/: ChatGroupCmd.cpp  ChatGroupCmd.hpp
linux/source/Common/: CommonVar.h  FileUtils.cpp  FileUtils.hpp
linux/source/DataBase/: DatabaseProxy.cpp  DatabaseProxy.h  MemberInfo.cpp  MemberInfo.h  MessageInfo.cpp  MessageInfo.h
linux/test/: CMakeLists.txt  main.cpp
